wordpress wrap fix

--- a/src/components/portfolio/projects/Projects.module.css
+++ b/src/components/portfolio/projects/Projects.module.css
@@ -265,7 +265,7 @@ h3 {
   }
 }
 
-@media (max-width: 830px){
+@media (max-width: 840px){
   .h3{
     font-size: 28px;
   }
